chanbong.park   - splayer: modified to display

--- a/splayer/splayer.vcxproj.filters
+++ b/splayer/splayer.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Resource.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="splayerctrl.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="splayer.cpp">
@@ -42,6 +45,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="splayerctrl.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
