--- a/splayer/splayer.vcxproj
+++ b/splayer/splayer.vcxproj
@@ -90,7 +90,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;_DEBUG;LIB_ZPLAY_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -134,7 +134,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;NDEBUG;LIB_ZPLAY_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -183,12 +183,14 @@
   <ItemGroup>
     <ClInclude Include="Resource.h" />
     <ClInclude Include="splayer.h" />
+    <ClInclude Include="splayerctrl.h" />
     <ClInclude Include="splayerdlg.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="splayer.cpp" />
+    <ClCompile Include="splayerctrl.cpp" />
     <ClCompile Include="splayerdlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -206,7 +208,17 @@
   <ItemGroup>
     <Image Include="res\splayer.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\libzplay\libzplay.vcxproj">
+      <Project>{d26f92e4-90f2-4a67-8179-af4ae1fd8180}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="splayer.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
